member_form/static/member_form/stylesheets/style.css
@font-face {
    font-family: 'DD Custom Font';
    src: url('../fonts/ufonts.com_scala-sans-regular-lf-webfont.eot');
    src: url('../fonts/ufonts.com_scala-sans-regular-lf-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/ufonts.com_scala-sans-regular-lf-webfont.woff') format('woff'),
         url('../fonts/ufonts.com_scala-sans-regular-lf-webfont.ttf') format('truetype'),
         url('../fonts/ufonts.com_scala-sans-regular-lf-webfont.svg#scala_sansregular') format('svg');
    font-weight: normal;
    font-style: normal;

}

body {
	font-size:1em;
	font-family:'DD Custom Font','Helvetica Neue',arial,sans-serif;
	font-size:1em;
	padding:0;
	margin:0;
	background-color:#F4F4F4;
	overflow-x:hidden;
}

.wrapper {
	width:90%;
	max-width:700px;
	margin:auto;
	border:1px solid #C6C6C6;
	margin-top:30px;
	padding-bottom:30px;
	margin-bottom:30px;
	background-color:white;
}

.container__header {
	width:100%;
	background-color:#30B236;
	text-align:center;
	pointer-events:none;
}

.container__header__logo {
	height:60px;
	position:relative;
	top:2px;
}

.grid {
	display:table;
	width:100%;
	margin-top:30px;
}

.container__form__input, select {
	-webkit-appearance: none;
	background-color: whitesmoke;
	font-size: 1em;
	font-family: 'DD Custom Font','Helvetica Neue',arial,sans-serif;
	color: black;
	border: 1px solid #C6C6C6;
	background-color: #F4F4F4;
	outline: 0;
	padding: 10px 8px 10px 8px;
	margin-top:5px;
	display: block;
	width: 100%;
	border-radius:0;
  -webkit-appearance:none;
  -moz-appearance:none;
}

/* turning off native firefox validation */
input:invalid, input:-moz-ui-valid {
     box-shadow: none;     
}


.select--holder::after {
	content:"\25BE";
	position:relative;
	bottom:30px;
	left:70%;
	pointer-events:none;
}

.container__form__input:focus {
	border-color:#ADADAD;
}

.container__form__label {
	display:block;
	width:100%;
	overflow: hidden;
  	text-overflow: ellipsis;
  	white-space: nowrap;
}

.grid__col--1-of-2#form--first--first label, .grid__col--1-of-2#form--first--first input {
  margin-left: 7%;
  margin-right: 3%;
  width:90%;
  display:block;
}

.grid__col--1-of-2#form--first--second label, .grid__col--1-of-2#form--first--second input {
  margin-left: 3%;
  margin-right: 7%;
  width:90%;
  display:block;
}

.grid .grid__col {
	margin-right:0;
}

.form--second--first {
  display: table-cell;
  left: 3.5%;
  width: 43%;
  margin-right: 3.5%;
  position: relative;
}

.form--second--second {
  display: table-cell;
  width: 46.5%;
  position: relative;
  left: 3.5%;
 }

.grid__col--4-of-6 {
   width:40%;
 }

.grid__col--2-of-6 {
   width: 43.5%;
   margin-left: 3%;
}

.grid__col--3-of-4 {
  margin-left: 0;
  left: 0;
  width: 70%;
}

.grid__col--4-of-4 {
  width: 95%;
}

.grid__col--1-of-4 {
  width: 26%;
  margin-left: 2.5%;
}

.grid--title {
  margin-top: 30px;
  margin-left: 3.5%;
  margin-bottom: 0;
}

.grid--nomargin {
	margin-top:7px;
	font-size:.9em;
	line-height:2;
}

.grid--nomargin .form--second--first {
	width:20%;
}

.input--item {
	margin-left:-5px;
}

.input--item label {
	margin-left:5px;
}

.submit--button {
	font-size:1em;
	font-family:'DD Custom Font','Helvetica Neue',arial,sans-serif;
	-webkit-appearance:none;
	border:0;
	border-radius:3px;
	background-color:#30B236;
	color:white;
	padding:8px 20px 8px 20px;	
	font-size:1.1em;
	-webkit-transition:background .1s;
	cursor:pointer;
}

.grid.nested.third {
	margin-top:15px;
}

.submit--button:focus {
	outline:0;
	background-color:#34853D;
}

.required {
  color: #C72E2E;
  margin-left: 3%;
  margin-top: 25px;
}

#birthdate, #mobile_number {
  color:gray;
}

/* view #2 -- confirmation page */
.confirmation {
  display:none;
  padding:20px 15px 20px 15px;
  margin-left:7%;
  margin-right:7%;
}


/* CHECKBOXES -- custom */

input[type=checkbox].css-checkbox {
							position:absolute; z-index:-1000; left:-1000px; overflow: hidden; clip: rect(0 0 0 0); height:1px; width:1px; margin:-1px; padding:0; border:0;
						}

						input[type=checkbox].css-checkbox + label.css-label, input[type=checkbox].css-checkbox + label.css-label.clr {
							padding-left:23px;
							height:15px; 
							display:inline-block;
							line-height:15px;
							background-repeat:no-repeat;
							background-position: 0 0;
							font-size:15px;
							vertical-align:middle;
							cursor:pointer;

						}

						input[type=checkbox].css-checkbox:checked + label.css-label, input[type=checkbox].css-checkbox + label.css-label.chk {
							background-position: 0 -15px;
						}
						label.css-label {
				background-image:url('../media/checkbox.png');
				-webkit-touch-callout: none;
				-webkit-user-select: none;
				-khtml-user-select: none;
				-moz-user-select: none;
				-ms-user-select: none;
				user-select: none;
			}
			
			.blank label {
			color:red;
			}
			
			.blank input, .blank input:focus, .blank select, .blank select:focus {
			border-color:red;
			}
			
			.blank label:after {
			content:" *";
			}

  /* firefox-specific styling */

  @-moz-document url-prefix() { 
      .grid > .grid__col--1-of-2#form--first--first {
        width:49%;
      }

      select {
        height:40.5px;
      }
  }

  /* IE styles are done using separate stylesheet - 'ie.css' */
/* responsive media queries */

    @media (max-width: 800px) {

        .grid__col.grid__col--3-of-4.width--mob {
    		width:69%;
    	}

      .width--tab {
        width: 100%; 
        display:block;
      } 

      .wrapper {
      	max-width:800px;
        width:100%;
        margin:0;
      }

      }

    @media (max-width: 550px) {

      .width--mob, .width--tab {
        width: 100% !important; 
        display:block;
        margin-left:0;
        margin-right:0;
        position:static;
        margin-bottom:20px;
      } 

      .width--mob * {
        margin-left:0 !important;
        width:90% !important;
      }

      .compress--mob {
      	margin-bottom:0 !important;
      }

      .grid {
      	margin-top:0 !important;
      	position:relative;
      	left:15px;
      }

      .container__header {
      	margin-bottom:25px;
      }

      .form--state {
      	  width: 80% !important;
  		margin-left: 10px !important;
      }

      .form--city {
      	width:100% !important;
      }

      label.form--city--left {
      	margin-left:10px !important;
      }

      .grid__col--1-of-4 {
      	width:20% !important;
      	display:table-cell !important;
      	margin-right:30px;
      }

      .grid__col--3-of-4 {
      	width:40% !important;
      	display:table-cell !important;
      }

      .smaller--orig {
      	width:100% !important;
      }

      .nested .form--second--first {
      		left:0;
      		width:100%;
      		display:block;
      }

      .nested.final .form--second--second {
      	  width: 100%;
  		  display: block;
  		  left: 0;
      }

      .final {
      	margin-top:5px;
      	margin-bottom:30px;
      }

      .button .form--second--first {
      	left:0;
      	font-size:1.1em;
      }

      .grid__col--4-of-6 {
      	width:60%;
      }

      .grid--title {
      	margin-left:15px;
      	margin-bottom:5px;
      }


      }

